--- a/fssearch-parent/fssearch-web/src/main/webapp/index.html
+++ b/fssearch-parent/fssearch-web/src/main/webapp/index.html
@@ -1,23 +1,35 @@
 <!doctype html>
 <html lang="en" data-ng-app="app">
 <head>
-    <meta charset="utf-8">
-    <title>FsSearch</title>
-    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-<!--     <link rel="stylesheet" href="css/specific.css"> -->
+<meta charset="utf-8">
+<title>FsSearch</title>
+<link rel="stylesheet"
+	href="vendor/bootstrap/dist/css/bootstrap.min.css">
+	<style type="text/css">
+[ng\:cloak], [ng-cloak], .ng-cloak {
+	display: none !important;
+}
+</style>
 </head>
-<body>
+<body ng-cloak class="ng-cloak">
 
-<div ng-view></div>
+	<div class="container">
+		<ul class="nav nav-pills" role="tablist">
+			<li ng-class="{active:tab('home')}"><a href="#/home">home</a></li>
+			<li><a href="#/login">login</a></li>
+			<li ng-show="authenticated"><a href="" ng-click="logout()">logout</a></li>
+		</ul>
+	</div>
+	<div class="container">
+		<div ng-view></div>
+	</div>
 
-<script src="vendor/angular/angular.min.js"></script>
-<script src="vendor/angular-route/angular-route.min.js"></script>
-<script src="search/search.js"></script>
-<script src="home/home.js"></script>
-<script src="js/controller.js"></script>
-<script src="js/apps.js"></script>
-<!-- <script src="js/filters.js"></script> -->
-<!-- <script src="js/routes.js"></script> -->
-<!-- <script src="js/services.js"></script> -->
+	<script src="vendor/angular/angular.min.js"></script>
+	<script src="vendor/angular-route/angular-route.min.js"></script>
+	<script src="search/search.js"></script>
+	<script src="home/home.js"></script>
+	<script src="login.js"></script>
+	<script src="js/controller.js"></script>
+	<script src="js/apps.js"></script>
 </body>
 </html>
