--- a/fssearch-parent/fssearch-web/src/main/webapp/search/search_panel.html
+++ b/fssearch-parent/fssearch-web/src/main/webapp/search/search_panel.html
@@ -1,15 +1,17 @@
-<p>{{temp}}</p>
-
 <!-- The search box puts the term into $scope.searchTerm
        and calls $scope.search() on submit -->
 <section class="searchField">
 	<form ng-submit="search()">
 		<input type="text" ng-model="searchTerm"> <input type="submit"
-			value="Search for recipes">
+			value="Search">
 	</form>
 </section>
 
 
-<div ng-repeat="document in documents">
-		<a href='{{document.path}}'>{{document.title}}</a>
+<div class="table-responsive">
+	<table class="table table-striped table-hover">
+		<tr ng-repeat="document in documents">
+			<td><a href='{{document.path}}'>{{document.title}}</a></td>
+		</tr>
+	</table>
 </div>
