Copy/Paste et FuzzyLike

--- a/fssearch-parent/fssearch-web/src/main/webapp/index.html
+++ b/fssearch-parent/fssearch-web/src/main/webapp/index.html
@@ -24,12 +24,16 @@
 		<div ng-view></div>
 	</div>
 
+	<script src="vendor/jquery/dist/jquery.min.js"></script>
 	<script src="vendor/angular/angular.min.js"></script>
 	<script src="vendor/angular-route/angular-route.min.js"></script>
+		<script type="text/javascript" src="vendor/zeroclipboard/dist/ZeroClipboard.js"></script>
+	<script type="text/javascript" src="vendor/angular-zeroclipboard/src/angular-zeroclipboard.js"></script>
 	<script src="search/search.js"></script>
 	<script src="admin/admin.js"></script>
 	<script src="login.js"></script>
 	<script src="js/controller.js"></script>
 	<script src="js/apps.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
