--- a/fssearch-parent/fssearch-web/src/main/webapp/search/search_panel.html
+++ b/fssearch-parent/fssearch-web/src/main/webapp/search/search_panel.html
@@ -7,11 +7,18 @@
 	</form>
 </section>
 
-
 <div class="table-responsive">
 	<table class="table table-striped table-hover">
 		<tr ng-repeat="document in documents">
-			<td><a href='{{document.path}}'>{{document.title}}</a></td>
+			<td>
+				{{document.title}}
+			</td>
+			<td>
+				<input type="text" name="input"  ng-init="myText=document.path" ng-model="myText" >				
+			</td>
+			<td>
+				<button ui-zeroclip zeroclip-copied="copied=true" zeroclip-model="myText">Copy</button>
+			</td>
 		</tr>
 	</table>
 </div>
