--- a/fssearch-parent/fssearch-web/src/main/webapp/index.html
+++ b/fssearch-parent/fssearch-web/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 }
 </style>
 </head>
-<body ng-cloak class="ng-cloak">
+<body>
 
 	<div class="container">
 		<ul class="nav nav-pills" role="tablist">
