--- a/fssearch-parent/fssearch-web/src/main/resources/static/index.html
+++ b/fssearch-parent/fssearch-web/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 	<div class="container">
 		<ul class="nav nav-pills" role="tablist">
 			<li ng-class="{active:tab('search')}"><a href="#/search">Recherche</a></li>
-			<li><a href="#/admin">Administration</a></li>
+			<li style="display:none;"><a href="#/admin">Administration</a></li>
 			<li ng-show="authenticated"><a href="" ng-click="logout()">logout</a></li>
 		</ul>
 	</div>
